# leak-duck

./: .gitattributes  .gitignore  README.md  egg_pool.json  events.json  pyproject.toml  raid_bosses.json  requirements-dev.txt  requirements.txt  research_tasks.json  rocket_lineups.json
.github/: data-branch-readme.md  dependabot.yml
.github/workflows/: ci.yml  run_scrapers.yml
archives/: archive_2025.json  archive_2026.json
src/: archiver.py  config.json  main.py  paths.py  run.py  utils.py  validation.py
src/scrapers/: __init__.py  base_scraper.py  egg_scraper.py  event_page_scraper.py  event_scraper.py  raid_boss_scraper.py  research_scraper.py  rocket_lineup_scraper.py
tests/: test_archiver.py  test_scrapers.py  test_validation.py
